# chichewa-asr

./: .gitignore  pyproject.toml  transcripts.txt
configs/: whisper_hparams_baseline.yaml  whisper_hparams_debug.yaml  whisper_params.yaml
docs/: creating-test-dataset.md
notebooks/: 02-data-prep.ipynb  02_whisper_finetune.ipynb  Chichewa_Exploration.ipynb  benchmark-stt-models.ipynb  data-prep.ipynb  whisper_finetune_duration_sweep.ipynb
notebooks/mms/: 01-mms_finetune_adapter.ipynb
notebooks/whisper/: 01-whisper_finetune.ipynb  03-data-quality-experiments.ipynb  whisper_finetune_datasets_experiments.ipynb
outputs/model-benchmarks/: results-whisper-mms.csv
scripts/: train_dataset_experiment.py
src/: audio_utils.py
src/data_utils/: data_utils.py
src/train/: train_mms.py  train_whisper.py  whisper_duration_experiment.py
