[project]
name = "chichewa-asr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=7.4.3",
    "great-tables>=0.21.0",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "openai>=2.32.0",
    "pandas>=3.0.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "transformers>=5.4.0",
]
